# SplatTopTeams

./: .env.example  .gitignore  ENTITY_RESOLUTION_EVALUATION.md  ENTITY_RESOLUTION_RESPONSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: verify_and_publish_images.yaml
dockerfiles/: dockerfile.api  dockerfile.frontend  nginx.frontend.conf
docs/: entity_resolution_benchmark.md  entity_resolution_design.md  launch_runbook.md
frontend/: Makefile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  routerState.js  styles.css
frontend/src/api/: analytics.js  client.js  players.js  (+4 more)
scripts/: benchmark_entity_resolution.py  benchmark_store_perf.py  evaluate_real_family_references.py  evaluate_team_family_clustering.py  mirror_analytics_tables.py
src/shared_lib/: __init__.py  db.py  team_vector_utils.py
src/team_api/: __init__.py  __main__.py  analytics_logic.py  app.py  dependencies.py  entity_resolution_reference.py  family_clustering.py  healbook_reference.py  middleware.py  real_family_reference.py  search_consolidation.py  search_logic.py  settings.py  sql.py  store.py  team_lab_service.py
src/team_jobs/: __init__.py  __main__.py  refresh_embeddings.py
tests/: test_analytics_logic.py  test_api_contract.py  test_entity_resolution_reference.py  test_family_clustering.py  test_healbook_reference.py  test_real_family_reference.py  test_refresh_embeddings.py  test_search_consolidation.py  test_search_logic.py  test_sql.py  test_store_cache.py  test_store_search.py  test_team_lab_service.py
(+19 files in other folders)
